--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.0.2",
     "@storyblok/astro": "^4.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^4.2.1",
