content: fix config, delete articles

--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -12,7 +12,7 @@ collections_config:
       - content
     _inputs:
       title:
-        type: string
+        type: text
         label: News Title
       excerpt:
         type: textarea
