--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.3.0",
     "@fancyapps/ui": "^5.0.33",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^4.3.3",
