--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fancyapps/ui": "^5.0.33",
     "@tailwindcss/typography": "^0.5.10",
     "astro": "^4.4.13",
+    "sharp": "^0.33.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
