fix: remove trusted view

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self' www.youtube-nocookie.com; style-src 'self'; form-action 'self'; script-src 'self'; connect-src 'self'; img-src 'self' ik.imagekit.io; base-uri 'self'; frame-ancestors 'self'; object-src 'none'; require-trusted-types-for 'script';"
+          "value": "default-src 'self' www.youtube-nocookie.com; style-src 'self'; form-action 'self'; script-src 'self'; connect-src 'self'; img-src 'self' ik.imagekit.io; base-uri 'self'; frame-ancestors 'self'; object-src 'none';"
         }
       ]
     }
