feat: update url to lions club saint louis

--- a/src/content/clubs/frankreich.yml
+++ b/src/content/clubs/frankreich.yml
@@ -7,5 +7,5 @@ clubs:
     href: http://lions-mulhouse-europe.blogspot.com/
     image: https://ik.imagekit.io/6uqkzvybwk/regio-lions/clubs/lions-club-mulhouse-europe.jpg?updatedAt=1706905841796
   - name: Lions Club Saint-Louis
-    href: http://www.lionsclubsl.info/
+    href: https://lionssaintlouis.fr
     image: https://ik.imagekit.io/6uqkzvybwk/regio-lions/clubs/lions-club-saint-louis.jpg?updatedAt=1706905843925
